--- a/arch/arm/configs/liquid_shamu_defconfig
+++ b/arch/arm/configs/liquid_shamu_defconfig
@@ -613,6 +613,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_BOOST=y
 
 #
