--- a/arch/arm/configs/liquid_shamu_defconfig
+++ b/arch/arm/configs/liquid_shamu_defconfig
@@ -249,8 +249,11 @@ CONFIG_EFI_PARTITION=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
-# CONFIG_IOSCHED_ROW is not set
-# CONFIG_IOSCHED_CFQ is not set
+CONFIG_IOSCHED_ROW=Y
+CONFIG_IOSCHED_CFQ=Y
+CONFIG_IOSCHED_BFQ=Y
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
@@ -606,14 +609,16 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_BOOST=y
 
 #
@@ -3828,3 +3833,4 @@ CONFIG_QMI_ENCDEC=y
 
 # Liquid Extras
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_INTELLI_PLUG=y
