Sound Control: initial bring up for Nexus 6 Linux 3.10 kernel driver
Initial import of FauxSound Driver 3.6 from 3.4 linux kernel drivers tailored
for Nexus 6

GPL Copyright 2014 Paul Reioux (Faux123)

Signed-off-by: Paul Reioux <reioux@gmail.com>

--- a/arch/arm/configs/liquid_shamu_defconfig
+++ b/arch/arm/configs/liquid_shamu_defconfig
@@ -3889,7 +3889,6 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_VIRTUALIZATION is not set
 
-
-
-
-
+# Liquid Extras
+CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
